app/assets/stylesheets/players.scss
// Place all the styles related to the Players controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: https://sass-lang.com/

.btn.btn-link.bootstrap-destroy-button{
  color: #000;
  font-size: 13px;
  padding: 0;
}

