Minor layout issues add search button to hotwire fix css for destroy link tweak react component

--- a/app/assets/stylesheets/players.scss
+++ b/app/assets/stylesheets/players.scss
@@ -3,7 +3,6 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 .btn.btn-link.bootstrap-destroy-button{
-  color: #000;
   font-size: 13px;
   padding: 0;
 }
